Fixed footer overlap

--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   padding-top: 80px;
-  padding-bottom: 800px;
+  padding-bottom: 750px;
+  gap: 15px;
 }
 
 h1 {
