--- a/src/components/Events.module.css
+++ b/src/components/Events.module.css
@@ -14,8 +14,8 @@
   align-items: center;
   flex-direction: column;
   padding-top: 80px;
-  padding-bottom: 520px;
-  gap: 75px;
+  padding-bottom: 780px;
+  gap: 65px;
 }
 
 .footer {
